# osvolbackup

./: .gitignore  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
doc/: BackupDescription.md
git-hooks/: pre-commit
osvolbackup/: __main__.py  backup.py  osauth.py  project.py  server.py  verbose.py
osvolbackup/cli/: create.py  project.py  server.py
scripts/: check_qemu_agent.sh  release.sh
tests/: create-test-server.sh
