[metadata]
name = osvolbackup
url = https://github.com/CCSGroupInternational/osvolbackup
author = jpinto@ccsint.eu
author_email = jpinto@ccsint.eu
summary = OpenStack volume based backups tool
version = attr: osvolbackup.cli.version
description = OpenStack volume based backups tool
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Testing
    Topic :: Utilities

[options]
include_package_data = True
packages = find:

[options.package_data]
* = *.txt, *.rst

[bdist_wheel]
universal=1



